[BACKPORT 2.27.0.3492][PLAT-18555]: Block YB-DB restore when universe upgrade in not in ready state.
Summary:
Instead of blocking restore during monitoring phase for PG-15 upgrade, YBA should block it for all upgrades.
Original commit: 3c8fca4b21b36b97f3f8e2f75640f8e200dbdcdf / D46778

Test Plan: unit tests

Reviewers: anabaria

Reviewed By: anabaria

Subscribers: yugaware

Differential Revision: https://phorge.dev.yugabyte.com/D46821